--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,10 @@ License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+Imports:
+ stats,
+ xgboost(>= 0.81.0.0),
+ lightgbm (>= 2.1),
+ class,
+ survival
+ 
