--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: A package used to model survival data from advanced machine learning algo
 Version: 0.1.0
 Author: Kaiqiao Li, Sijie Yao
 Maintainer: The package maintainer <Sijie.Yaof@moffitt.org>
-Description: fit survival data with XGBoost and LightGBM.
+Description: model survival data with XGBoost and LightGBM.
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
@@ -14,5 +14,6 @@ Imports:
  xgboost(>= 0.81.0.0),
  lightgbm (>= 2.1),
  class,
- survival
+ survival,
+ partykit
  
